--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,10 @@
 <div class="home-container">
-    <h1>🚗🛵 Welcome to Smart Parking Management</h1>
-    <p>Book your car or bike slots easily</p>
+  <div class="home-content">
+    <h1>🚗🛵 Smart Parking Management</h1>
+    <p>Book your car or bike slots effortlessly</p>
+    <a routerLink="/login" class="cta-button">Get Started</a>
+  </div>
+  <div class="home-image">
     <img src="https://tse1.mm.bing.net/th?id=OIP.pUkPR1XmDiiY3vmrR0PFuQHaJJ&pid=Api" alt="Parking UI" />
   </div>
+</div>
