--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,13 +1,31 @@
-<div class="container">
-    <h1>Register</h1>
-    <label>
-      Username:
-      <input type="text" [(ngModel)]="username" />
-    </label>
-    <label>
-      Password:
-      <input type="password" [(ngModel)]="password" />
-    </label>
-    <button class="button" (click)="register()">Register</button>
-    <p>Already have an account? <a routerLink="/login">Login</a></p>
-  </div>
+<div class="register-container">
+  <h1>📝 Register</h1>
+
+  <form (ngSubmit)="register()" class="register-form">
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" id="username" [(ngModel)]="username" name="username" required />
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" [(ngModel)]="password" name="password" required />
+    </div>
+
+    <div class="form-group">
+      <label for="bikeNumber">Bike Vehicle Number (Optional):</label>
+      <input type="text" id="bikeNumber" [(ngModel)]="bikeNumber" name="bikeNumber" />
+    </div>
+
+    <div class="form-group">
+      <label for="carNumber">Car Vehicle Number (Optional):</label>
+      <input type="text" id="carNumber" [(ngModel)]="carNumber" name="carNumber" />
+    </div>
+
+    <button type="submit" class="button">Register</button>
+
+    <p class="login-link">
+      Already have an account? <a routerLink="/login">Login here</a>
+    </p>
+  </form>
+</div>
