--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 
     <a *ngIf="isLoggedIn && isAdmin" routerLink="/admin">Admin Panel</a>
     <a *ngIf="isLoggedIn && !isAdmin" routerLink="/user">Dashboard</a>
-    <a *ngIf="isLoggedIn && !isAdmin" routerLink="/booking">Booking</a>
+    <!-- <a *ngIf="isLoggedIn && !isAdmin" routerLink="/booking">Booking</a> -->
   </div>
 
   <div class="nav-right">
